--- a/components/plasmic/teru_components/PlasmicAppbar.module.css
+++ b/components/plasmic/teru_components/PlasmicAppbar.module.css
@@ -57,12 +57,13 @@
 .nicknames {
   width: 100%;
   height: 57px;
-  display: block;
-  position: relative;
-  left: auto;
-  top: auto;
+  display: flex;
+  position: sticky;
+  left: 0px;
+  top: 0px;
   z-index: 1;
   align-self: center;
+  flex-direction: column;
   min-width: 0;
 }
 .nicknameId01 {
@@ -72,12 +73,13 @@
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   letter-spacing: -0.0125em;
-  line-height: 100%;
+  line-height: 60px;
   color: rgba(37, 49, 55, 1);
-  position: sticky;
-  top: 20px;
-  left: 59px;
+  position: relative;
+  top: auto;
+  left: auto;
   z-index: 1;
+  align-self: stretch;
 }
 .info {
   width: 50px;
