--- a/components/plasmic/teru_components/PlasmicHomepage.module.css
+++ b/components/plasmic/teru_components/PlasmicHomepage.module.css
@@ -12,3 +12,15 @@
   font-size: 32px;
   padding: 32px;
 }
+.appbar__r1LsQ:global(.__wab_instance) {
+  position: relative;
+}
+.textButton:global(.__wab_instance) {
+  position: relative;
+}
+.appbar___7WMdC:global(.__wab_instance) {
+  position: relative;
+}
+.textField:global(.__wab_instance) {
+  position: relative;
+}
